🐛  [bug]修复popup组件z-index问题.

--- a/components/popup/theme.css
+++ b/components/popup/theme.css
@@ -5,6 +5,7 @@
     transform: translate(0, 10px);
     opacity: 0;
     position: absolute;
+    z-index: var(--z-index-high);
     box-shadow: 0 1px 6px rgba(0,0,0,.2);
     transition:
       opacity var(--animation-duration) var(--animation-curve-default),
